--- a/appsettings.json
+++ b/appsettings.json
@@ -7,12 +7,19 @@
   },
   "GoogleKeys": {
     "ClientId": "",
-    "ClientSecret": ""
+    "ClientSecret": "",
+    "CallbackPath": "/auth/callback",
+    "RedirectUri": ""
+
 
   },
+  "FacebookKeys": {
+    "AppId": "",
+    "AppSecret": ""
+  },
   "ConnectionStrings": {
-    "ConnectDB": "Server=27.71.20.51;Database=ThaiYVien;User Id=sa;Password=Long78596@;TrustServerCertificate=True;"
-    //"ConnectDB": "Data Source=DESKTOP-CFIUC99;Initial Catalog=ThaiYVien;Integrated Security=True;TrustServerCertificate=True;"
+    //"ConnectDB": "Server=27.71.20.51;Database=ThaiYVien;User Id=sa;Password=Long78596@;TrustServerCertificate=True;"
+    "ConnectDB": "Data Source=DESKTOP-CFIUC99;Initial Catalog=ThaiYVien;Integrated Security=True;TrustServerCertificate=True;"
 
   },
   "EmailSettings": {
