tìm kiếm , đặt lịch trị liệu , xử lý phần dịch vụ.

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,19 +8,15 @@
   "GoogleKeys": {
     "ClientId": "",
     "ClientSecret": "",
-    "CallbackPath": "/auth/callback",
-    "RedirectUri": ""
-
-
+    "CallbackPath": "/signin-google"
   },
   "FacebookKeys": {
     "AppId": "",
     "AppSecret": ""
   },
   "ConnectionStrings": {
-    //"ConnectDB": "Server=27.71.20.51;Database=ThaiYVien;User Id=sa;Password=Long78596@;TrustServerCertificate=True;"
-    "ConnectDB": "Data Source=DESKTOP-CFIUC99;Initial Catalog=ThaiYVien;Integrated Security=True;TrustServerCertificate=True;"
-
+    "ConnectDB": "Server=27.71.20.51;Database=ThaiYVien;User Id=sa;Password=Long78596@;TrustServerCertificate=True;",
+    //"ConnectDB": "Data Source=DESKTOP-CFIUC99;Initial Catalog=ThaiYVien;Integrated Security=True;TrustServerCertificate=True;"
   },
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
@@ -29,8 +25,8 @@
     "SenderEmail": "longkolp16@gmail.com",
     "SenderPassword": "kwxd uzjs cars mian"
   },
-
-
-
+  "ForwardedHeadersOptions": {
+    "ForwardedHeaders": "X-Forwarded-For,X-Forwarded-Proto"
+  },
   "AllowedHosts": "*"
 }
